# django_blog

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  entry.sh  pyproject.toml
.github/workflows/: ci.yml
apps/blog/: admin.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_post_author.py
apps/blog/templates/blog/: about.html  base.html  home.html
apps/templates/base/: base.html
apps/templates/base/messages/: msg_info.html
apps/templates/base/partials/: navbar.html
apps/templates/base/status_code/: 400.html
apps/templates/blog/: about.html  home.html
apps/templates/users/: register.html
apps/tests/blog/: test_models.py  test_urls.py
apps/tests/blog/urls/: test_about_page.py  test_home_page.py
apps/tests/blog/views/: test_about_page.py  test_home_page.py  test_post_create.py  test_post_delete.py  test_post_update.py  test_user_post_list.py
apps/tests/factories/: users.py
apps/tests/users/: test_models.py  test_urls.py  test_views.py
apps/tests/users/views/: test_register_account.py  test_update_profile.py
apps/users/: admin.py  apps.py  forms.py  models.py  signals.py  test_models.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_profile_image.py
config/: asgi.py  settings.py  urls.py  wsgi.py
static/base/: main.css
templates/base/: base.html
templates/base/form_errors/: form_error_alert.html
templates/base/messages/: msg_error.html
templates/base/partials/: footer.html  navbar.html  sidebar.html
templates/base/status_code/: 403.html  404.html  500.html
templates/blog/: home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
